// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourceTableRowMenuItemActions component table.actions.compliance.remove renders as expected 1`] = `
Array [
  Object {
    "data": Object {
      "data": Object {
        "apiVersion": undefined,
        "kind": "HCMCompliance",
      },
      "label": Object {
        "heading": "modal.remove-hcmcompliance.heading",
        "label": "modal.remove-hcmcompliance.label",
        "primaryBtn": "modal.remove-hcmcompliance.heading",
      },
      "open": true,
      "resourceType": Object {
        "name": "HCMCompliance",
        "query": "ALL_POLICIES",
      },
      "type": "resource-remove",
    },
    "type": "MODAL_UPDATE",
  },
]
`;

exports[`ResourceTableRowMenuItemActions component table.actions.compliance.remove table.actions.policy.remove is called as expected 1`] = `
Array [
  Object {
    "data": Object {
      "data": Object {
        "apiVersion": undefined,
        "kind": "HCMCompliance",
      },
      "label": Object {
        "heading": "modal.remove-hcmcompliance.heading",
        "label": "modal.remove-hcmcompliance.label",
        "primaryBtn": "modal.remove-hcmcompliance.heading",
      },
      "open": true,
      "resourceType": Object {
        "name": "HCMCompliance",
        "query": "ALL_POLICIES",
      },
      "type": "resource-remove",
    },
    "type": "MODAL_UPDATE",
  },
]
`;

exports[`ResourceTableRowMenuItemActions component table.actions.compliance.remove table.actions.remove is called as expected 1`] = `
Array [
  Object {
    "data": Object {
      "data": Object {
        "apiVersion": undefined,
        "kind": "HCMCompliance",
      },
      "label": Object {
        "heading": "modal.remove-hcmcompliance.heading",
        "label": "modal.remove-hcmcompliance.label",
        "primaryBtn": "modal.remove-hcmcompliance.heading",
      },
      "open": true,
      "resourceType": Object {
        "name": "HCMCompliance",
        "query": "ALL_POLICIES",
      },
      "type": "resource-remove",
    },
    "type": "MODAL_UPDATE",
  },
]
`;

exports[`ResourceTableRowMenuItemActions table.actions.edit is called as expected 1`] = `
Array [
  Object {
    "data": Object {
      "action": "put",
      "data": Object {
        "kind": "HCMCompliance",
      },
      "editorMode": "json",
      "label": Object {
        "heading": "modal.edit-hcmcompliance.heading",
        "label": "modal.edit-hcmcompliance.label",
        "primaryBtn": "modal.button.submit",
      },
      "open": true,
      "resourceType": Object {
        "name": "HCMCompliance",
        "query": "ALL_POLICIES",
      },
      "type": "resource-edit",
    },
    "type": "MODAL_UPDATE",
  },
]
`;

exports[`ResourceTableRowMenuItemActions table.actions.launch.cluster is called as expected 1`] = `
Array [
  "consoleURL",
  "_blank",
]
`;
